[gd_scene load_steps=4 format=3 uid="uid://b744yx6d1y0pg"]

[ext_resource type="Script" path="res://Scripts/Glyphs/BindingPoint.gd" id="1_lbg86"]
[ext_resource type="Texture2D" uid="uid://c43mngk2xy2ls" path="res://Images/Icons/Binding Points/pointed.svg" id="2_v70nn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7s0vq"]
radius = 1.0

[node name="BindingPoint" type="Node2D"]
script = ExtResource("1_lbg86")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_v70nn")

[node name="DragArea" type="Area2D" parent="."]

[node name="CollisionCircle" type="CollisionShape2D" parent="DragArea"]
shape = SubResource("CircleShape2D_7s0vq")

[node name="RotateArea" type="Area2D" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="RotateArea"]
polygon = PackedVector2Array(0.55, -0.895, 1.475, -0.5, 1.935, 0, 1.475, 0.5, 0.58, 0.855, 0.84, 0)

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="mouse_entered" from="DragArea" to="." method="_on_drag_area_mouse_entered"]
[connection signal="mouse_exited" from="DragArea" to="." method="_on_drag_area_mouse_exited"]
[connection signal="mouse_entered" from="RotateArea" to="." method="_on_rotation_drag_area_mouse_entered"]
[connection signal="mouse_exited" from="RotateArea" to="." method="_on_rotation_drag_area_mouse_exited"]
